crates/ts-pack-core/tests/snapshots/wire_format__structure_kind_other_serializes_as_single_keyed_object.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "StructureKind::Other(\"macro\".to_string())"
---
{
  "Other": "macro"
}
