crates/ts-pack-core/tests/snapshots/wire_format__structure_kind_unit_variant_serializes_as_bare_string-3.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "StructureKind::Class"
---
"Class"
